[tool.poetry]
name = "irpia-prompt"
version = "0.1.0"
description = "Irpia suggestion microservice using LLM prompts"
authors = ["Joachim Dornbusch <joadorn@gmail.com>"]
readme = "README.md"
packages = [{ include = "irpia_prompt" }]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.0"
pydantic-settings = "^2.0.2"
httpx = "^0.24.1"
redis-om = "^0.2.1"
jinja2 = "^3.1.2"
pytest-asyncio = "^0.21.1"
uvicorn = "^0.23.2"

[tool.poetry.group.development]
optional = true


[tool.poetry.group.development.dependencies]
black = { extras = ["d"], version = "^23.7.0" }
pylint = "^2.17.5"
pytest = "^7.4.0"

[tool.poetry.group.gpt]
optional = true

[tool.poetry.group.gpt.dependencies]
openai = "^0.27.8"

[tool.poetry.group.llm]
optional = true

[tool.poetry.group.llm.dependencies]
transformers = "^4.34.1"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
sentencepiece = "^0.1.99"
protobuf = "^4.24.4"
accelerate = "^0.24.1"
nvidia-ml-py = "^12.535.133"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
